--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = fdmfilaments
 version = 0.1
 author = Tim Zimmermann
 author_email = timzi@uio.no
-description = Code for the reproduction of the paper plots of arxiv...
+description = Code for the reproduction of the paper plots of arrXiv:2412.10829
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = MIT
@@ -16,6 +16,13 @@ classifiers =
 packages = find:
 zip_safe = True
 include_package_data = True
+install_requires =
+    tqdm
+    ruamel.yaml
+    mpi4py
+    h5py
+    yt
+    dask[complete]
 
 [options.package_data]
 * = README.md
