--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ packages = find:
 zip_safe = True
 include_package_data = True
 install_requires =
+    fuzzylli @ git+https://git@github.com/timzimm/fuzzylli@main
     tqdm
     ruamel.yaml
     mpi4py
